home page overflow issue

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,10 @@
 
 /* Custom styles */
 
+*{
+  word-wrap: break-word;
+}
+
 nav div ul li::before {
   content: none;
 }
